# ComputerGraphics

./: CMakeLists.txt  main.cpp
Headers/: FloodFiller.h  LineDrawer.h  RectDrawer.h  ShapeFiller.h  Tool.h  Utils.h  Vector2D.h
src/: FloodFiller.cpp  LineDrawer.cpp  RectDrawer.cpp  Utils.cpp  Vector2D.cpp
src/ClippingAlgorithms/: LineClipper.cpp  LineClipper.h  ShapeClipper.h
src/FillingAlgorithms/: FloodFiller.cpp  FloodFiller.h  GeneralPolygonFiller.cpp  GeneralPolygonFiller.h  ShapeFiller.h
src/ShapeTools/: CircleDrawer.cpp  CircleDrawer.h  EllipseDrawer.cpp  EllipseDrawer.h  LineDrawer.cpp  LineDrawer.h  PolygonTool.cpp  PolygonTool.h  RectDrawer.cpp  RectDrawer.h  Tool.h
src/Utilities/: Utils.cpp  Utils.h
src/Utilities/Line/: Line.cpp  Line.h
src/Utilities/Vectors/: Vector2D.cpp  Vector2D.h
